octo-cluster/cluster/apps/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
    - name: http
      protocol: TCP
      port: 8080
