octo-cluster/cluster/apps/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: homer
  namespace: homer
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homer
                port:
                  number: 8080
  tls:
    - hosts:
        - ${SECRET_DOMAIN}
      secretName: homer-tls
